--- a/process_training_validation_data.ipynb
+++ b/process_training_validation_data.ipynb
@@ -296,10 +296,10 @@
     "a['CIrededge'] = np.int32(np.around(a['CIrededgef'] * 10 ** 7))\n",
     "\n",
     "\n",
-    "# please be notified that you cannot calculate the square root of a negative number;\n",
+    "# Note that you cannot calculate the square root of a negative number;\n",
     "# when (nir - red) index used by 'MSAVI' might return a negative number;\n",
     "# the system will return a runtime error: \"RuntimeWarning: invalid value encountered in sqrt\";\n",
-    "# just ignore the runtime error and proceed as normal, this script will delete the wired number at the end.\n",
+    "# just ignore the runtime error and proceed as normal, this script will delete the invalid numbers at the end.\n",
     "\n",
     "# print the column of 'a'\n",
     "\n",
@@ -618,10 +618,10 @@
     "d['NDRE2'] = np.int32(np.around(d['NDRE2f'] * 10 ** 7))\n",
     "\n",
     "\n",
-    "# please be notified that you cannot calculate the square root of a negative number;\n",
+    "# Note that you cannot calculate the square root of a negative number;\n",
     "# when (nir - red) index used by 'MSAVI' might return a negative number;\n",
     "# the system will return a runtime error: \"RuntimeWarning: invalid value encountered in sqrt\";\n",
-    "# just ignore the runtime error and proceed as normal, this script will delete the wired number at the end.\n",
+    "# just ignore the runtime error and proceed as normal, this script will delete the invalid numbers at the end.\n",
     "\n",
     "\n",
     "# print the column of 'd'\n",
@@ -1204,7 +1204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
